<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ex8</string>
    <string name="label_ville_dep">City of departure</string>
    <string name="label_ville_arr">City of arrival</string>

    <string name="btn_rech_train">Search for trains</string>
    <string name="list_horaire_dep">Available times</string>

    <string name="hint_city_dep">Ex : London</string>
    <string name="hint_city_arr">Ex : Cambridge</string>
</resources>