<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Départ -->
    <TextView
        android:id="@+id/tvDepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ville_dep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDepart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="city"
        android:inputType="text"
        android:hint="@string/hint_city_dep"
        app:layout_constraintTop_toBottomOf="@id/tvDepart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Arrivée -->
    <TextView
        android:id="@+id/tvArrivee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ville_arr"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etDepart"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etArrivee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="city"
        android:inputType="text"
        android:hint="@string/hint_city_arr"
        app:layout_constraintTop_toBottomOf="@id/tvArrivee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton -->
    <Button
        android:id="@+id/btnRechercher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rech_train"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etArrivee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Liste des horaires -->
    <TextView
        android:id="@+id/tvHoraires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_horaire_dep"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnRechercher"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listHoraires"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvHoraires"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
